# app/controllers/api/v1/transactions_controller.rb
@@ -1,0 +1,52 @@
+class Api::V1::TransactionsController < Api::V1::BaseController
+  before_action :set_transaction, only: %i[show update destroy]
+
+  def index
+    @transactions = current_user.transactions
+                                .with_category
+                                .by_date
+    render json: TransactionBlueprint.render(@transactions), status: :ok
+  end
+
+  def show
+    render json: TransactionBlueprint.render(@transaction), status: :ok
+  end
+
+  def create
+    @transaction = current_user.transactions.new(transaction_params)
+    if @transaction.save
+      render json: TransactionBlueprint.render(@transaction), status: :created
+    else
+      render json: { errors: @transaction.errors.full_messages }, status: :unprocessable_entity
+    end
+  end
+
+  def update
+    if @transaction.update(transaction_params)
+      render json: TransactionBlueprint.render(@transaction), status: :ok
+    else
+      render json: { errors: @transaction.errors.full_messages }, status: :unprocessable_entity
+    end
+  end
+
+  def destroy
+    @transaction.destroy
+    render json: { message: "Transaction deleted." }, status: :ok
+  end
+
+  private
+
+  def set_transaction
+    @transaction = current_user.transactions.find(params[:id])
+  end
+
+  def transaction_params
+    params.require(:transaction).permit(
+      :amount_cents,
+      :currency,
+      :description,
+      :transacted_at,
+      :category_id
+    )
+  end
+end
